@@ -4,6 +4,10 @@
 # BREAK = change breaks existing code
 # BUG   = fixed a bug that was crashing
 
+May 22, 2001
+	added midleft, midright, midtop, and midbottom to Rect
+	added Rect.unionall() function to union a list of Rects
+
 May 20, 2001
 	applied dave wallace's patch to fix memory freeing
 
